--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,7 +1,4 @@
 <div class="row">
-    <div class="col-md-3">
-        <span class="hipster img-fluid rounded"></span>
-    </div>
     <div class="col-md-9">
         <h1 class="display-4">Welcome, Java Hipster!</h1>
         <p class="lead">This is your homepage</p>
@@ -21,16 +18,6 @@
                 <a class="alert-link" routerLink="register">Register a new account</a>
             </div>
         </div>
-
-        <div>
-            <h1>Spring Security ACL</h1>
-            <div class="form-group">
-                <label></label>
-                <select>
-                    <option></option>
-                </select>
-                <button>Add </button>
-            </div>
-        </div>
+        <jhi-access-control></jhi-access-control>
     </div>
 </div>
