[IMP] Improve the request to create the data of  acl control table

--- a/src/main/webapp/app/home/access-control/access-control.component.html
+++ b/src/main/webapp/app/home/access-control/access-control.component.html
@@ -7,9 +7,9 @@
             <option selected>...</option>
             <option *ngFor="let user of users" [ngValue]="user">{{user.login}}</option>
         </select>
-        <div class="input-group-append col-4">
-            <button class="btn btn-outline-secondary" type="button" (click)="addSid()">Add TO ACL_SID</button>
-        </div>
+        <!--<div class="input-group-append col-4">-->
+            <!--<button class="btn btn-outline-secondary" type="button" (click)="addSid()">Add TO ACL_SID</button>-->
+        <!--</div>-->
     </div>
     <div class="input-group mb-3 row">
         <div class="input-group-prepend col-3">
@@ -17,9 +17,9 @@
         </div>
         <input type="text" class="form-control col-4" id="inputText01"
                placeholder="Text Full Class Name Here" [(ngModel)]="className" />
-        <div class="input-group-append col-4">
-            <button class="btn btn-outline-secondary" type="button" (click)="addSidClass()">Add To Object Class</button>
-        </div>
+        <!--<div class="input-group-append col-4">-->
+            <!--<button class="btn btn-outline-secondary" type="button" (click)="addSidClass()">Add To Object Class</button>-->
+        <!--</div>-->
     </div>
     <div class="input-group mb-3 row">
         <div class="input-group-prepend col-3">
@@ -32,7 +32,7 @@
             <option value="3">Read AND Write</option>
         </select>
         <div class="input-group-append col-4">
-            <button class="btn btn-outline-secondary" type="button">ADD ACCESS</button>
+            <button class="btn btn-outline-secondary" type="button" (click)="addAccess()">ADD ACCESS</button>
         </div>
     </div>
 </div>
